--- a/scss/_productos.scss
+++ b/scss/_productos.scss
@@ -1,442 +1,234 @@
+.body-productos {
 
-.main-producto {
-    margin-top: 45px;
-    opacity: 0.9;
-    background-color: black;
+background: $back-ground-productos;
+
 }
-  .titulo-productos {
-    margin: 0 auto;
+  .seccion-producto-0 {
+    width: 95%;
+    margin: 30px auto 0 auto;
+    display: grid;
+    grid-gap: 1rem;
+    grid-template-columns: 100%;
+    grid-template-areas: "cabeza" "torso-0" "torso-1" "torso-2" "torso-3" "pie-0" "pie-1" "pie-2" "pie-3";
+    border: 5px solid #000000;
   
-    h2 {
-      font-size: 3rem;
-      font-family: 'Bebas Neue', cursive;
-      color: #fff;
-      padding: 1rem;
-      margin-bottom: -30px;
-      text-align: center; 
+  p {
+    font-size: 3.5em;
+    text-align: left;
+    text-align: center;
+    font-family: "Bebas Neue", cursive;
+  }
+  div {
+    width: 100%;
+  
+  }
+
+  img {
+    width: 100%;
+    height: 100%;
+    transition: transform 1.5s;
+    border: 5px solid #000000;
+ 
+    &:hover {
+      transform: scale(1.1);
     }
-      p {
-        margin: 10px auto;
-        font-size: 1.3rem;
-        font-family: 'Bebas Neue', cursive;
-        color: #fff;
-        padding: 1rem;
-        text-align: center;
-      }
-  } 
+  }
+}
+  
+  .seccion-producto-1 {
+    width: 95%;
+    margin: 30px auto 0 auto;
+    display: grid;
+    grid-gap: 1rem;
+    grid-template-columns: auto;
+    grid-template-areas: "cabeza-1" "tronco-0" "tronco-1" "tronco-2" "tronco-3" "raiz-0" "raiz-1" "raiz-2" "raiz-3";
+    border: 5px solid #000000;
+  
+  p {
+    font-size: 3.5em;
+    font-family: "Bebas Neue", cursive;
+    text-align: center;
+    padding: 10px;
+  }
 
-    .seccion-producto-0 {
-      width: 95%;
-      margin: 30px auto 0 auto;
-      border: 1px solid #fff;
-      display: grid;
-      grid-gap: 1rem;
-      grid-template-columns: 100%;
-      grid-template-areas: 
-         "cabeza"
-         "torso-0"
-         "torso-1"
-         "torso-2"
-         "torso-3"
-         "pie-0"
-         "pie-1"
-         "pie-2"
-         "pie-3";
+  div {
+    width: 100%;
     
-      p {
-        font-size: 3.5em;
-        font-family: 'Bebas Neue', cursive;
-        color: #fff;
-        text-align: left;
-        text-align: center;
-        border: 1px solid #fff;
-      }
-      div {
-        width: 100%; 
-      }
-        img {
-          width: 100%;
-          height: 100%;
-          transition: transform 1.5s;
-      
-          &:hover {
-            transform: scale(1.1);
-          }
-        }  
-    }   
-
-    .seccion-producto-1 {
-      width: 95%;
-      margin: 30px auto 0 auto;
-      border: 1px solid #fff;
-      display: grid;
-      grid-gap: 1rem;
-      grid-template-columns: 100%;
-      grid-template-areas: 
-          "cabeza-1"
-          "tronco-0"
-          "tronco-1"
-          "tronco-2"
-          "tronco-3"
-          "raiz-0"
-          "raiz-1"
-          "raiz-2"
-          "raiz-3";
-      
-        p {
-          font-size: 3.5em;
-          font-family: 'Bebas Neue', cursive;
-          color: #fff;
-          text-align: center;
-          padding: 10px;
-          border: 1px solid #fff;
-        }
-          div {
-            width: 100%;
-       
-          }
-            img { 
-              width:  100%;
-              height: 100%;
-              transition: transform 1.5s;
-            
-              &:hover {
-                transform: scale(1.1);
-              }
-            }
-      }
-
-    .seccion-producto-2 {
-      width: 95%;
-      margin: 20px auto 10px auto;
-      display: grid;
-      border: 1px solid #fff;
-      grid-gap: 1rem;
-      grid-template-columns: 100%;
-      grid-template-areas: 
-        "cabeza-2"
-        "abdomen-0"
-        "abdomen-1"
-        "abdomen-2"
-        "abdomen-3"
-        "pierna-0"
-        "pierna-1"
-        "pierna-2"
-        "pierna-3";
-      
-        p {
-          font-size: 3.5em;
-          font-family: 'Bebas Neue', cursive;
-          color: #fff;
-          text-align: center;
-          padding: 10px;
-          border: 1px solid #fff;
-        }
-          img {
-            width:  100%;
-            height: 100%;
-            transition: transform 1.5s;
-          
-            &:hover {
-              transform: scale(1.1);
-            }
-          }  
-        }
-
-@media only screen and (min-width: 475px) and (max-width: 599px){
+  }
   
-  .main-producto {
-    margin-top: 2.7rem;
+  img {
+    width: 100%;
+    height: 100%;
+    transition: transform 1.5s;
+    border: 5px solid #000000;
   
+    &:hover {
+      transform: scale(1.1);
+    }
+  }
+}
+
+
+  .seccion-producto-2 {
+    width: 95%;
+    margin: 20px auto 10px auto;
+    display: grid;
+    border: 5px solid #000000;
+    grid-gap: 1rem;
+    grid-template-columns: 100%;
+    grid-template-areas: "cabeza-2" "abdomen-0" "abdomen-1" "abdomen-2" "abdomen-3" "pierna-0" "pierna-1" "pierna-2" "pierna-3";
+ 
+  p {
+    font-size: 3.5em;
+    font-family: "Bebas Neue", cursive;
+    text-align: center;
+    padding: 10px; 
+  }
+  img {
+    width: 100%;
+    height: 100%;
+    transition: transform 1.5s;
+    border: 5px solid #000000;
+  
+    &:hover {
+      transform: scale(1.1);
+    }
+  }
+}
+
+  @media screen and (min-width: 768px) {
+    .main-producto {
+      margin-top: 2.7rem;
+
     h2 {
       font-size: 3.9rem;
       width: 100%;
       text-align: center;
     }
-          
-      p {
-        font-size: 2rem;
-      }
-  }   
-
-   .seccion-producto-0 {
-     grid-template-columns: auto;
-     grid-template-areas:
-       "cabeza cabeza"
-       "torso-0 torse-1"
-       "torse-2 torso-3"
-       "pie-0 pie-1"
-       "pie-2 pie-3";
-     margin-bottom: 2rem;
-    
-   .cabeza {
-     grid-column-start: cabeza;
-     grid-column-end: cabeza;
-   }
+    p {
+      font-size: 2rem;
+    }
   }
-   .seccion-producto-1 {
-     grid-template-columns: auto;
-     grid-template-areas:
-      "cabeza-1 cabeza-1"
-      "tronco-0 tronco-1"
-      "tronco-2 tronco-3"
-      "raiz-0 raiz-1"
-      "raiz-2 raiz-3";
-    margin-bottom: 2rem;
-      
-    .cabeza-1 {
-      grid-column-start: cabeza-1;
-      grid-column-end: cabeza-1;
-    }
-  }       
-   .seccion-producto-2 {
-    grid-template-columns: auto;
-    grid-template-areas:
-          "cabeza-2 cabeza-2"
-          "abdomen-0 abdomen-1"
-          "abdomen-2 abdomen-3"
-          "pierna-0 pierna-1"
-          "pierna-2 pierna-3";
-    margin-bottom: 1rem;
-          
-   .cabeza-2 {
-    grid-column-start: cabeza-2;
-    grid-column-end: cabeza-2;
-    }
-  }  
 
-}
 
-@media only screen and (min-width: 600px) and (max-width: 725px)  {
-
-  .main-producto {
-    margin-top: 2.7rem;
-  
-    h2 {
-      font-size: 4.6rem;
-      width: 100%;
-      text-align: center;
-    } 
-      p {
-        font-size: 2.1rem;
-      }
-  }   
-
-   .seccion-producto-0 {
-     grid-template-columns: auto;
-     grid-template-areas:
-       "cabeza cabeza"
-       "torso-0 torse-1"
-       "torse-2 torso-3"
-       "pie-0 pie-1"
-       "pie-2 pie-3";
-     margin-bottom: 2rem;
+    .seccion-producto-0 {
+      grid-template-columns: auto;
+      grid-template-areas: "cabeza cabeza" "torso-0 torse-1" "torse-2 torso-3" "pie-0 pie-1" "pie-2 pie-3";
+      margin-bottom: 2rem;
     
-   .cabeza {
-     grid-column-start: cabeza;
-     grid-column-end: cabeza;
-     font-size: 3rem;
-   }
-  }
-   .seccion-producto-1 {
-     grid-template-columns: auto;
-     grid-template-areas:
-      "cabeza-1 cabeza-1"
-      "tronco-0 tronco-1"
-      "tronco-2 tronco-3"
-      "raiz-0 raiz-1"
-      "raiz-2 raiz-3";
-    margin-bottom: 2rem;
-      
-    .cabeza-1 {
-      grid-column-start: cabeza-1;
-      grid-column-end: cabeza-1;
-      font-size: 3rem;
-    }
-  }       
-   .seccion-producto-2 {
-    grid-template-columns: auto;
-    grid-template-areas:
-          "cabeza-2 cabeza-2"
-          "abdomen-0 abdomen-1"
-          "abdomen-2 abdomen-3"
-          "pierna-0 pierna-1"
-          "pierna-2 pierna-3";
-    margin-bottom: 1rem;
-          
-   .cabeza-2 {
-    grid-column-start: cabeza-2;
-    grid-column-end: cabeza-2;
-    font-size: 3rem;
-    }
-  }  
-}
-
-@media only screen and (min-width: 726px) and (max-width: 1026px) {
-
-  .main-producto {
-    margin-top: 6rem;
-  
-    h2 {
-      font-size: 4rem;
-      width: 100%;
-      text-align: center;
-    }
-          
-      p {
-        font-size: 1.7rem;
-      }
-  }   
-
-  .seccion-producto-0 {
-    display: grid;
-    grid-gap: 1rem;
-    grid-template-columns: auto;
-    grid-template-rows: 8rem 8rem 8rem;
-    grid-template-areas: 
-    "cabeza cabeza cabeza cabeza"
-    "torso-0 torso-1 torso-2 torseo-3"
-    "pie-0 pie-1 pie-2 pie-3";
-  
     .cabeza {
       grid-column-start: cabeza;
       grid-column-end: cabeza;
-      font-size: 3.3rem;
     }
   }
-  
-  
-  .seccion-producto-1 {
-    display: grid;
-    grid-gap: 1rem;
-    grid-template-columns: auto;
-    grid-template-rows: 8rem 8rem 8rem;
-    grid-template-areas: 
-    "cabeza-1 cabeza-1 cabeza-1 cabeza-1"
-    "tronco-0 tronco-1 tronco-2 tronco-3"
-    "raiz-0 raiz-1 raiz-2 raiz-3";
-  
+
+    .seccion-producto-1 {
+      grid-template-columns: auto;
+      grid-template-areas: "cabeza-1 cabeza-1" "tronco-0 tronco-1" "tronco-2 tronco-3" "raiz-0 raiz-1" "raiz-2 raiz-3";
+      margin-bottom: 2rem;
+    
     .cabeza-1 {
       grid-column-start: cabeza-1;
       grid-column-end: cabeza-1;
-      font-size: 3.3rem;
     }
-
   }
-  
-  .seccion-producto-2 {
-    display: grid;
-    grid-gap: 1rem;
-    grid-template-columns: auto;
-    grid-template-rows: 8rem 8rem 8rem;
-    grid-template-areas: 
-    "cabeza-2 cabeza-2 cabeza-2 cabeza-2"
-    "abdomen-0 abdomen-1 abdomen-2 abdomen-3"
-    "pierna-0 pierna-1 pierna-2 pierna-3";
-  
+
+    .seccion-producto-2 {
+      grid-template-columns: auto;
+      grid-template-areas: "cabeza-2 cabeza-2" "abdomen-0 abdomen-1" "abdomen-2 abdomen-3" "pierna-0 pierna-1" "pierna-2 pierna-3";
+      margin-bottom: 1rem;
+    
     .cabeza-2 {
       grid-column-start: cabeza-2;
       grid-column-end: cabeza-2;
-      font-size: 3.3rem;
     }
   }
-
 }
+  
+  @media screen and (min-width: 900px) {
 
-
-@media only screen and (min-width: 1027px) and (max-width: 1134px) {
-
-.main-producto {
-    margin-top: 6rem;
+    .main-producto {
+      margin-top: 6rem;
   
     h2 {
       font-size: 6rem;
       width: 100%;
       text-align: center;
-    }   
-      p {
-        font-size: 2rem;
-      }
-  }   
-  
-  .seccion-producto-0 {
-    display: grid;
-    grid-gap: 1rem;
-    grid-template-columns: auto;
-    grid-template-rows: 8rem 8rem 8rem;
-    grid-template-areas: 
-    "cabeza cabeza cabeza cabeza" 
-    "torso-0 torso-1 torso-2 torseo-3" 
-    "pie-0 pie-1 pie-2 pie-3";
+    }
 
+    p {
+      font-size: 2rem;
+    }
+  }
+
+    .seccion-producto-0 {
+      display: grid;
+      width: 80%;
+      grid-gap: 1rem;
+      grid-template-columns: auto;
+      grid-template-rows: 8rem 8rem 8rem;
+      grid-template-areas: "cabeza cabeza cabeza cabeza" "torso-0 torso-1 torso-2 torseo-3" "pie-0 pie-1 pie-2 pie-3";
+  
     .cabeza {
       grid-column-start: cabeza;
       grid-column-end: cabeza;
       font-size: 4rem;
     }
   }
-
-  .seccion-producto-1 {
-    display: grid;
-    grid-gap: 1rem;
-    grid-template-columns: auto;
-    grid-template-rows: 8rem 8rem 8rem;
-    grid-template-areas: 
-    "cabeza-1 cabeza-1 cabeza-1 cabeza-1"
-    "tronco-0 tronco-1 tronco-2 tronco-3"
-    "raiz-0 raiz-1 raiz-2 raiz-3";
-  
+    .seccion-producto-1 {
+      display: grid;
+      grid-gap: 1rem;
+      width: 80%;
+      grid-template-columns: auto;
+      grid-template-rows: 8rem 8rem 8rem;
+      grid-template-areas: "cabeza-1 cabeza-1 cabeza-1 cabeza-1" "tronco-0 tronco-1 tronco-2 tronco-3" "raiz-0 raiz-1 raiz-2 raiz-3";
+    
     .cabeza-1 {
       grid-column-start: cabeza-1;
       grid-column-end: cabeza-1;
       font-size: 4rem;
     }
   }
-
-  .seccion-producto-2 {
-    display: grid;
-    grid-gap: 1rem;
-    grid-template-columns: auto;
-    grid-template-rows: 8rem 8rem 8rem;
-    grid-template-areas: 
-    "cabeza-2 cabeza-2 cabeza-2 cabeza-2"
-    "abdomen-0 abdomen-1 abdomen-2 abdomen-3"
-    "pierna-0 pierna-1 pierna-2 pierna-3";
-  
-    .cabeza-2 {
-      grid-column-start: cabeza-2;
-      grid-column-end: cabeza-2;
-      font-size: 4rem;
+    .seccion-producto-2 {
+      display: grid;
+      grid-gap: 1rem;
+      width: 80%;
+      grid-template-columns: auto;
+      grid-template-rows: 8rem 8rem 8rem;
+      grid-template-areas: "cabeza-2 cabeza-2 cabeza-2 cabeza-2" "abdomen-0 abdomen-1 abdomen-2 abdomen-3" "pierna-0 pierna-1 pierna-2 pierna-3";
+    
+      .cabeza-2 {
+        grid-column-start: cabeza-2;
+        grid-column-end: cabeza-2;
+        font-size: 4rem;
+      }
     }
   }
-}
-
-@media only screen and (min-width: 1135px) {
-
-  .main-producto {
-    margin-top: 6rem;
   
-    h2 {
-      font-size: 6.3rem;
-      width: 100%;
-      text-align: center;
-    }   
+  
+  
+  @media only screen and (min-width: 1135px) {
+    .main-producto {
+      margin-top: 6rem;
+ 
+      h2 {
+        font-size: 6.3rem;
+        width: 100%;
+        text-align: center;
+      }
       p {
         font-size: 2rem;
         width: 50%;
       }
-  }  
-  
-  .seccion-producto-0 {
-    display: grid;
-    grid-gap: 1rem;
-    grid-template-columns: auto;
-    grid-template-rows: 8rem 8rem 8rem;
-    grid-template-areas: 
-    "cabeza cabeza cabeza cabeza" 
-    "torso-0 torso-1 torso-2 torseo-3" 
-    "pie-0 pie-1 pie-2 pie-3";
-  
+    }
+
+    .seccion-producto-0 {
+      display: grid;
+      grid-gap: 1rem;
+      grid-template-columns: auto;
+      grid-template-rows: 8rem 8rem 8rem;
+      grid-template-areas: "cabeza cabeza cabeza cabeza" "torso-0 torso-1 torso-2 torseo-3" "pie-0 pie-1 pie-2 pie-3";
+    
     .cabeza {
       grid-column-start: cabeza;
       grid-column-end: cabeza;
@@ -444,17 +236,14 @@
       width: 100%;
     }
   }
-    
-  .seccion-producto-1 {
-    display: grid;
-    grid-gap: 1rem;
-    grid-template-columns: auto;
-    grid-template-rows: 8rem 8rem 8rem;
-    grid-template-areas: 
-    "cabeza-1 cabeza-1 cabeza-1 cabeza-1"
-    "tronco-0 tronco-1 tronco-2 tronco-3"
-    "raiz-0 raiz-1 raiz-2 raiz-3";
-  
+
+    .seccion-producto-1 {
+      display: grid;
+      grid-gap: 1rem;
+      grid-template-columns: auto;
+      grid-template-rows: 8rem 8rem 8rem;
+      grid-template-areas: "cabeza-1 cabeza-1 cabeza-1 cabeza-1" "tronco-0 tronco-1 tronco-2 tronco-3" "raiz-0 raiz-1 raiz-2 raiz-3";
+   
     .cabeza-1 {
       grid-column-start: cabeza-1;
       grid-column-end: cabeza-1;
@@ -462,16 +251,13 @@
       width: 100%;
     }
   }
-    
-  .seccion-producto-2 {
-    display: grid;
-    grid-gap: 1rem;
-    grid-template-columns: auto;
-    grid-template-rows: 8rem 8rem 8rem;
-    grid-template-areas: 
-    "cabeza-2 cabeza-2 cabeza-2 cabeza-2"
-    "abdomen-0 abdomen-1 abdomen-2 abdomen-3"
-    "pierna-0 pierna-1 pierna-2 pierna-3";
+
+    .seccion-producto-2 {
+      display: grid;
+      grid-gap: 1rem;
+      grid-template-columns: auto;
+      grid-template-rows: 8rem 8rem 8rem;
+      grid-template-areas: "cabeza-2 cabeza-2 cabeza-2 cabeza-2" "abdomen-0 abdomen-1 abdomen-2 abdomen-3" "pierna-0 pierna-1 pierna-2 pierna-3";
   
     .cabeza-2 {
       grid-column-start: cabeza-2;
@@ -479,6 +265,5 @@
       font-size: 5rem;
       width: 100%;
     }
-  }     
+  }
 }
- 
