--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,12 +1,11 @@
-@import "variableGlobal";
-@import "generales";
-@import "header";
+/*generales*/
+@import "variablesGlobal";
+@import "nav+generales";
+@import "headers";
 @import "index";
 @import "bibliografia";
-@import "fanshots";
 @import "fanposts";
+@import "fanshots";
 @import "productos";
 @import "contacto";
 @import "footer";
-
-/*El trabajo presentado esta maquetado con metodo Mobile First, gracias por su atención. */
