--- a/scss/_bibliografia.scss
+++ b/scss/_bibliografia.scss
@@ -771,7 +771,7 @@ p {
   .figure_Rodman {
     height: 340px;
     width: 360px;
-    margin-bottom: 20rem;
+    margin-bottom: 6rem;
   }
 }
 
@@ -783,11 +783,13 @@ p {
   .figure_Duncan {
     height: 330px;
     width: 360px;
+    margin-bottom: 60px;
   }
 
   .figure_Manu {
     height: 330px;
     width: 360px;
+    margin-bottom: 50px;
   }
 
   .figure_Parker {
