--- a/scss/_headers.scss
+++ b/scss/_headers.scss
@@ -108,12 +108,12 @@
     z-index: -1;
   }
   
-  .seccion-bibliografia-0 h2 {
+  h2 {
     font-size: 3rem;
     font-family: "Bebas Neue", cursive;
   }
   
-  .seccion-bibliografia-0 p {
+  p {
     margin: 20px 0 40px;
     font-size: 1.2rem;
     font-family: "Bebas Neue", cursive;
