--- a/scss/_fanposts.scss
+++ b/scss/_fanposts.scss
@@ -1,6 +1,4 @@
-
 .main-fanposts {
-
   background: $back-ground-fanposts; 
   color: #ffffff;
 }
@@ -27,7 +25,7 @@
   
   h3 {
     text-align: center;
-    font-family: 'Michroma', sans-serif;
+    font-family: 'Sriracha', cursive;
     font-size: 1.5rem;
     padding: 10px 0;
   }
@@ -39,7 +37,7 @@
   
     p {
       font-size: 0.9rem;
-      font-family: 'Michroma', sans-serif;
+      font-family: 'Sriracha', cursive;
       text-align: center;
     }
   }
@@ -53,7 +51,7 @@
     text-align: center;
     font-size: 1rem;
     cursor: pointer;
-    font-family: 'Michroma', sans-serif;
+    font-family: 'Sriracha', cursive;
     transition: 0.3s ease all;
     position: relative;
     overflow: hidden;
@@ -95,7 +93,7 @@
   
   h3 {
     text-align: center;
-    font-family: 'Michroma', sans-serif;
+    font-family: 'Sriracha', cursive;
     font-size: 1.5rem;
     padding: 10px 0;
   }
@@ -106,7 +104,7 @@
  
     p {
       font-size: 0.9rem;
-      font-family: 'Michroma', sans-serif;
+      font-family: 'Sriracha', cursive;
       text-align: center;
     }
   }
@@ -120,7 +118,7 @@
     text-align: center;
     font-size: 1rem;
     cursor: pointer;
-    font-family: 'Michroma', sans-serif;
+    font-family: 'Sriracha', cursive;
     transition: 0.3s ease all;
     position: relative;
     overflow: hidden;
@@ -162,7 +160,7 @@
 
    h3 {
      text-align: center;
-     font-family: 'Michroma', sans-serif;
+     font-family: 'Sriracha', cursive;
      font-size: 1.5rem;
      padding: 10px 0;
    }
@@ -173,7 +171,7 @@
    
    p {
      font-size: 0.9rem;
-     font-family: 'Michroma', sans-serif;
+     font-family: 'Sriracha', cursive;
      text-align: center;
     }
   }
@@ -187,7 +185,7 @@
       text-align: center;
       font-size: 1rem;
       cursor: pointer;
-      font-family: 'Michroma', sans-serif;
+      font-family: 'Sriracha', cursive;
       transition: 0.3s ease all;
       position: relative;
       overflow: hidden;
@@ -231,7 +229,7 @@
    
    h3 {
      text-align: center;
-     font-family: 'Michroma', sans-serif;
+     font-family: 'Sriracha', cursive;
      font-size: 1.5rem;
      padding: 10px 0;
    }
@@ -242,7 +240,7 @@
    
    p {
      font-size: 0.9rem;
-     font-family: 'Michroma', sans-serif;
+     font-family: 'Sriracha', cursive;
      text-align: center;
    }
   }
@@ -256,7 +254,7 @@
      text-align: center;
      font-size: 1rem;
      cursor: pointer;
-     font-family: 'Michroma', sans-serif;
+     font-family: 'Sriracha', cursive;
      transition: 0.3s ease all;
      position: relative;
      overflow: hidden;
