--- a/scss/_fanshots.scss
+++ b/scss/_fanshots.scss
@@ -16,7 +16,8 @@
     text-align: center;
     padding: 0.5rem 0;
     border: 5px solid #000000;
-    font-family: "Bebas Neue", cursive;  
+    font-family: 'Righteous', cursive;
+    color: #fff;
   } 
 
   div {
@@ -61,7 +62,8 @@
     text-align: start;
     border: 3px dashed #000000;
     padding: 10px;
-    font-family: "Bebas Neue", cursive;
+    font-family: 'Righteous', cursive;
+    color: #fff;
   }
 
   .boton-fanshots {
@@ -74,7 +76,7 @@
     text-decoration: none;
     text-transform: uppercase;
     border-radius: 50px;
-    font-family: "Bebas Neue", cursive;
+    font-family: 'Righteous', cursive;
     font-size: 1rem;
     background-color: #463c3c;
   
