--- a/scss/_productos.scss
+++ b/scss/_productos.scss
@@ -16,7 +16,8 @@ background: $back-ground-productos;
     font-size: 3.5em;
     text-align: left;
     text-align: center;
-    font-family: "Bebas Neue", cursive;
+    font-family: 'Paytone One', sans-serif;
+    color: #fff;
   }
   div {
     width: 100%;
@@ -40,13 +41,17 @@ background: $back-ground-productos;
     margin: 30px auto 0 auto;
     display: grid;
     grid-gap: 1rem;
+    grid-template-rows: auto;
     grid-template-columns: auto;
     grid-template-areas: "cabeza-1" "tronco-0" "tronco-1" "tronco-2" "tronco-3" "raiz-0" "raiz-1" "raiz-2" "raiz-3";
     border: 5px solid #000000;
   
+  
+
   p {
     font-size: 3.5em;
-    font-family: "Bebas Neue", cursive;
+    font-family: 'Paytone One', sans-serif;
+    color: #fff;
     text-align: center;
     padding: 10px;
   }
@@ -80,7 +85,8 @@ background: $back-ground-productos;
  
   p {
     font-size: 3.5em;
-    font-family: "Bebas Neue", cursive;
+    font-family: 'Paytone One', sans-serif;
+    color: #fff;
     text-align: center;
     padding: 10px; 
   }
@@ -166,7 +172,7 @@ background: $back-ground-productos;
       width: 80%;
       grid-gap: 1rem;
       grid-template-columns: auto;
-      grid-template-rows: 8rem 8rem 8rem;
+      grid-template-rows: auto;
       grid-template-areas: "cabeza cabeza cabeza cabeza" "torso-0 torso-1 torso-2 torseo-3" "pie-0 pie-1 pie-2 pie-3";
   
     .cabeza {
@@ -180,7 +186,7 @@ background: $back-ground-productos;
       grid-gap: 1rem;
       width: 80%;
       grid-template-columns: auto;
-      grid-template-rows: 8rem 8rem 8rem;
+      grid-template-rows: auto;
       grid-template-areas: "cabeza-1 cabeza-1 cabeza-1 cabeza-1" "tronco-0 tronco-1 tronco-2 tronco-3" "raiz-0 raiz-1 raiz-2 raiz-3";
     
     .cabeza-1 {
@@ -194,7 +200,7 @@ background: $back-ground-productos;
       grid-gap: 1rem;
       width: 80%;
       grid-template-columns: auto;
-      grid-template-rows: 8rem 8rem 8rem;
+      grid-template-rows: auto;
       grid-template-areas: "cabeza-2 cabeza-2 cabeza-2 cabeza-2" "abdomen-0 abdomen-1 abdomen-2 abdomen-3" "pierna-0 pierna-1 pierna-2 pierna-3";
     
       .cabeza-2 {
@@ -226,7 +232,7 @@ background: $back-ground-productos;
       display: grid;
       grid-gap: 1rem;
       grid-template-columns: auto;
-      grid-template-rows: 8rem 8rem 8rem;
+      grid-template-rows: auto;
       grid-template-areas: "cabeza cabeza cabeza cabeza" "torso-0 torso-1 torso-2 torseo-3" "pie-0 pie-1 pie-2 pie-3";
     
     .cabeza {
@@ -241,7 +247,7 @@ background: $back-ground-productos;
       display: grid;
       grid-gap: 1rem;
       grid-template-columns: auto;
-      grid-template-rows: 8rem 8rem 8rem;
+      grid-template-rows: auto;
       grid-template-areas: "cabeza-1 cabeza-1 cabeza-1 cabeza-1" "tronco-0 tronco-1 tronco-2 tronco-3" "raiz-0 raiz-1 raiz-2 raiz-3";
    
     .cabeza-1 {
@@ -256,7 +262,7 @@ background: $back-ground-productos;
       display: grid;
       grid-gap: 1rem;
       grid-template-columns: auto;
-      grid-template-rows: 8rem 8rem 8rem;
+      grid-template-rows: auto;
       grid-template-areas: "cabeza-2 cabeza-2 cabeza-2 cabeza-2" "abdomen-0 abdomen-1 abdomen-2 abdomen-3" "pierna-0 pierna-1 pierna-2 pierna-3";
   
     .cabeza-2 {
