--- a/scss/_headers.scss
+++ b/scss/_headers.scss
@@ -170,8 +170,6 @@
     z-index: 1;
     
   .seccion-fanshots-0 {
-
-    font-family: 'Righteous', cursive;;
     color: #fff;
     position: absolute;
     top: 50%;
@@ -182,14 +180,15 @@
     z-index: -1;
 
     h2 {
-      font-size: 3.5rem;
+      font-size: 3.0rem;
       font-family: 'Righteous', cursive;
+
     }
     
     p {
       margin: 20px 0 40px;
       font-size: 1.3rem;
-      font-family: "Bebas Neue", cursive;
+      font-family: 'Righteous', cursive;
     } 
   }
 }
