--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2118,7 +2118,7 @@
   border: 5px solid #000000;
 }
 .seccion-producto-0 p {
-  font-size: 3.5em;
+  font-size: 3em;
   text-align: left;
   text-align: center;
   font-family: "Paytone One", sans-serif;
@@ -2142,17 +2142,15 @@
   margin: 30px auto 0 auto;
   display: grid;
   grid-gap: 1rem;
-  grid-template-rows: auto;
-  grid-template-columns: auto;
+  grid-template-columns: 100%;
   grid-template-areas: "cabeza-1" "tronco-0" "tronco-1" "tronco-2" "tronco-3" "raiz-0" "raiz-1" "raiz-2" "raiz-3";
   border: 5px solid #000000;
 }
 .seccion-producto-1 p {
-  font-size: 3.5em;
+  font-size: 2.5em;
+  text-align: center;
   font-family: "Paytone One", sans-serif;
   color: #fff;
-  text-align: center;
-  padding: 10px;
 }
 .seccion-producto-1 div {
   width: 100%;
@@ -2177,7 +2175,7 @@
   grid-template-areas: "cabeza-2" "abdomen-0" "abdomen-1" "abdomen-2" "abdomen-3" "pierna-0" "pierna-1" "pierna-2" "pierna-3";
 }
 .seccion-producto-2 p {
-  font-size: 3.5em;
+  font-size: 2.5em;
   font-family: "Paytone One", sans-serif;
   color: #fff;
   text-align: center;
@@ -2301,8 +2299,6 @@
   .seccion-producto-0 {
     display: grid;
     grid-gap: 1rem;
-    grid-template-columns: auto;
-    grid-template-rows: auto;
     grid-template-areas: "cabeza cabeza cabeza cabeza" "torso-0 torso-1 torso-2 torseo-3" "pie-0 pie-1 pie-2 pie-3";
   }
   .seccion-producto-0 .cabeza {
@@ -2314,8 +2310,6 @@
   .seccion-producto-1 {
     display: grid;
     grid-gap: 1rem;
-    grid-template-columns: auto;
-    grid-template-rows: auto;
     grid-template-areas: "cabeza-1 cabeza-1 cabeza-1 cabeza-1" "tronco-0 tronco-1 tronco-2 tronco-3" "raiz-0 raiz-1 raiz-2 raiz-3";
   }
   .seccion-producto-1 .cabeza-1 {
@@ -2327,8 +2321,6 @@
   .seccion-producto-2 {
     display: grid;
     grid-gap: 1rem;
-    grid-template-columns: auto;
-    grid-template-rows: auto;
     grid-template-areas: "cabeza-2 cabeza-2 cabeza-2 cabeza-2" "abdomen-0 abdomen-1 abdomen-2 abdomen-3" "pierna-0 pierna-1 pierna-2 pierna-3";
   }
   .seccion-producto-2 .cabeza-2 {
