--- a/scss/_nav+generales.scss
+++ b/scss/_nav+generales.scss
@@ -19,6 +19,7 @@
     font-family: 'Lobster', cursive;
     color: #fff;
     text-decoration: underline;
+    margin-left: 1rem;
   }
   
   .hamburguesa {
