--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -5,10 +5,12 @@
     font-family: "Lobster", cursive;
     color: #fff;
   }
-  .main__contacto legend {
+  
+  legend {
     font-family: "Bebas Neue", cursive;
     text-align: center;
-    margin-top: 6.5rem;
+    margin-top: 1.5rem;
+    font-size: 2.5rem;
   }
   
   #checkbox {
