--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -10,7 +10,10 @@
     font-family: "Bebas Neue", cursive;
     text-align: center;
     margin-top: 1.5rem;
-    font-size: 2.5rem;
+
+    h3 {
+      font-size: 2.5rem;
+    }
   }
   
   #checkbox {
