--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -7,6 +7,7 @@
     width: 100%;
     height: auto;
     max-width: 1000px;
+    padding-top: 1rem;
   
   h2 {
     font-family: 'Permanent Marker', cursive;
