--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,6 +4,7 @@
 /*fanshots*/
 /*productos*/
 /*contacto*/
+@import url("https://fonts.googleapis.com/css2?family=Paytone+One&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -17,21 +18,33 @@
   align-items: center;
 }
 .nav a {
-  text-decoration: #fff;
-}
-.nav a h1 {
+  position: relative;
+  text-decoration: none;
   font-family: "Lobster", cursive;
   color: #fff;
-  text-decoration: underline;
   margin-left: 1rem;
+  position: relative;
+  padding-top: 0.5rem;
+}
+.nav a h1 {
+  color: #fff;
+  background: linear-gradient(to right, rgba(248, 245, 245, 0.959), rgb(246, 250, 250)), linear-gradient(to right, rgb(241, 120, 21), rgba(255, 0, 179, 0.815), rgb(0, 200, 200));
+  background-size: 100% 3px, 0 3px;
+  background-position: 100% 100%, 0 100%;
+  background-repeat: no-repeat;
+  transition: background-size 400ms;
+}
+.nav a h1:hover {
+  background-size: 0 3px, 100% 3px;
+  color: wheat;
 }
 .nav .hamburguesa {
   position: relative;
   width: 30px;
   height: 4px;
-  background-color: #fff;
+  background-color: gray;
   cursor: pointer;
-  z-index: 2;
+  z-index: 200;
   border-radius: 10px;
   transition: 0.3s;
 }
@@ -40,7 +53,8 @@
   position: absolute;
   height: 4px;
   right: 0;
-  background: #fff;
+  background-color: gray;
+  z-index: 200;
   border-radius: 10px;
   transition: 0.3s;
 }
@@ -66,26 +80,27 @@
 .nav .nav-links ul li {
   list-style: none;
   display: inline-block;
-  padding: 8px 12px;
+  padding: 30px 12px;
   position: relative;
 }
 .nav .nav-links ul li:after {
   content: "";
   width: 0%;
   height: 2px;
-  background: #dbd5d4;
   display: block;
   margin: auto;
-  transition: 0.5s;
+  background: linear-gradient(to right, rgb(100, 200, 200), rgb(211, 41, 188));
+  transition: 400ms;
 }
 .nav .nav-links ul li:hover:after {
   width: 100%;
+  transition: 400ms;
 }
 .nav .nav-links ul li a {
   color: #fff;
   margin-top: 1rem;
   text-decoration: none;
-  font-size: 1.1rem;
+  font-size: 1.3rem;
   font-family: "Sriracha", cursive;
 }
 .nav .nav-links input {
@@ -95,6 +110,7 @@
   right: 0;
   background-color: #000000;
   opacity: 0.9;
+  height: 100%;
 }
 .nav .nav-links input:checked ~ .hamburguesa {
   background: transparent;
@@ -112,7 +128,6 @@
 .nav .toogle-menu {
   position: absolute;
   width: 30px;
-  height: 100%;
   z-index: 3;
   cursor: pointer;
   opacity: 0;
@@ -131,13 +146,16 @@
   height: 350px;
   padding-top: 65px;
   width: 100%;
+  transition: 0.5s;
 }
 .nav .menu li {
   width: 100%;
 }
 .nav .menu a {
   padding: 30px;
-  font-size: 24px;
+}
+.nav .menu a:hover {
+  color: wheat;
 }
 
 @media screen and (min-width: 1200px) {
@@ -204,6 +222,9 @@
   height: auto;
   margin-top: 1rem;
 }
+.header .caja-texto figcaption button {
+  background-color: #000000;
+}
 .header .coder {
   display: inline-block;
   text-decoration: none;
@@ -231,7 +252,7 @@
 }
 /*header Bibliografia*/
 .header-bibliografia {
-  min-height: 100vh;
+  min-height: 100vw;
   width: 100%;
   background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url(../assets/Bigthree.jpg);
   background-position: center;
@@ -251,7 +272,7 @@
   z-index: -1;
 }
 .header-bibliografia h2 {
-  font-size: 3rem;
+  font-size: 2rem;
   font-family: "Lobster", cursive;
 }
 .header-bibliografia p {
@@ -260,6 +281,11 @@
   font-family: "Lobster", cursive;
 }
 
+@media screen and (min-width: 1024px) {
+  .header-bibliografia {
+    min-height: 50vw;
+  }
+}
 /*header fanposts*/
 .header-fanposts {
   min-height: 100vh;
@@ -1383,6 +1409,9 @@
   .seccion-bibliografia-5 .figure_Lam-Der {
     width: 50%;
   }
+  .seccion-bibliografia-5 .figure_Lam-Der p {
+    text-align: center;
+  }
   .seccion-bibliografia-5 .figure_young {
     width: 50%;
   }
@@ -1891,7 +1920,6 @@
 .seccion-fanshots-1 h2 {
   font-size: 2.5rem;
   text-align: center;
-  padding: 0.5rem 0;
   border: 5px solid #000000;
   font-family: "Righteous", cursive;
   color: #fff;
@@ -2106,228 +2134,238 @@
   background: linear-gradient(to top, #cbad6d, #d53369);
 }
 
-.seccion-producto-0 {
-  width: 95%;
-  margin: 30px auto 0 auto;
-  display: grid;
-  grid-gap: 1rem;
-  grid-template-columns: 100%;
-  grid-template-areas: "cabeza" "torso-0" "torso-1" "torso-2" "torso-3" "pie-0" "pie-1" "pie-2" "pie-3";
-  border: 5px solid #000000;
-}
-.seccion-producto-0 p {
-  font-size: 3em;
-  text-align: left;
-  text-align: center;
-  font-family: "Paytone One", sans-serif;
-  color: #fff;
-}
-.seccion-producto-0 div {
-  width: 100%;
-}
-.seccion-producto-0 img {
-  width: 100%;
-  height: 100%;
-  transition: transform 1.5s;
-  border: 5px solid #000000;
-}
-.seccion-producto-0 img:hover {
-  transform: scale(1.1);
+.container__background-triangle {
+  max-width: 1200px;
+  height: 600px;
+  margin: auto;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: -1;
 }
 
-.seccion-producto-1 {
-  width: 95%;
-  margin: 30px auto 0 auto;
-  display: grid;
-  grid-gap: 1rem;
-  grid-template-columns: 100%;
-  grid-template-areas: "cabeza-1" "tronco-0" "tronco-1" "tronco-2" "tronco-3" "raiz-0" "raiz-1" "raiz-2" "raiz-3";
-  border: 5px solid #000000;
-}
-.seccion-producto-1 p {
-  font-size: 2.5em;
-  text-align: center;
-  font-family: "Paytone One", sans-serif;
-  color: #fff;
-}
-.seccion-producto-1 div {
-  width: 100%;
-}
-.seccion-producto-1 img {
-  width: 100%;
-  height: 100%;
-  transition: transform 1.5s;
-  border: 5px solid #000000;
-}
-.seccion-producto-1 img:hover {
-  transform: scale(1.1);
+.triangle {
+  width: 300px;
+  height: 300px;
+  background: red;
+  position: absolute;
 }
 
-.seccion-producto-2 {
-  width: 95%;
-  margin: 20px auto 10px auto;
-  display: grid;
-  border: 5px solid #000000;
-  grid-gap: 1rem;
-  grid-template-columns: 100%;
-  grid-template-areas: "cabeza-2" "abdomen-0" "abdomen-1" "abdomen-2" "abdomen-3" "pierna-0" "pierna-1" "pierna-2" "pierna-3";
-}
-.seccion-producto-2 p {
-  font-size: 2.5em;
-  font-family: "Paytone One", sans-serif;
-  color: #fff;
-  text-align: center;
-  padding: 10px;
-}
-.seccion-producto-2 img {
-  width: 100%;
-  height: 100%;
-  transition: transform 1.5s;
-  border: 5px solid #000000;
-}
-.seccion-producto-2 img:hover {
-  transform: scale(1.1);
+.triangle1 {
+  width: 250px;
+  height: 250px;
+  background: linear-gradient(to left, #0ea1e6, #1e67c7);
+  right: 100px;
+  top: 100px;
+  animation: t1 8s ease infinite;
 }
 
-@media screen and (min-width: 768px) {
-  .main-producto {
-    margin-top: 2.7rem;
+.triangle2 {
+  width: 200px;
+  height: 200px;
+  background: linear-gradient(to left, #ee8105, #c7371e);
+  top: 350px;
+  animation: t2 9s ease infinite;
+}
+
+.triangle3 {
+  width: 300px;
+  height: 300px;
+  background: linear-gradient(to left, #1b8fc5, #df0f8f);
+  left: 200px;
+  animation: t3 7s ease infinite;
+}
+
+@keyframes t1 {
+  0% {
+    transform: rotate(45deg) translateY(0px);
   }
-  .main-producto h2 {
-    font-size: 3.9rem;
-    width: 100%;
-    text-align: center;
+  50% {
+    transform: rotate(45deg) translateY(20px);
   }
-  .main-producto p {
-    font-size: 2rem;
-  }
-  .seccion-producto-0 {
-    grid-template-columns: auto;
-    grid-template-areas: "cabeza cabeza" "torso-0 torse-1" "torse-2 torso-3" "pie-0 pie-1" "pie-2 pie-3";
-    margin-bottom: 2rem;
-  }
-  .seccion-producto-0 .cabeza {
-    grid-column-start: cabeza;
-    grid-column-end: cabeza;
-  }
-  .seccion-producto-1 {
-    grid-template-columns: auto;
-    grid-template-areas: "cabeza-1 cabeza-1" "tronco-0 tronco-1" "tronco-2 tronco-3" "raiz-0 raiz-1" "raiz-2 raiz-3";
-    margin-bottom: 2rem;
-  }
-  .seccion-producto-1 .cabeza-1 {
-    grid-column-start: cabeza-1;
-    grid-column-end: cabeza-1;
-  }
-  .seccion-producto-2 {
-    grid-template-columns: auto;
-    grid-template-areas: "cabeza-2 cabeza-2" "abdomen-0 abdomen-1" "abdomen-2 abdomen-3" "pierna-0 pierna-1" "pierna-2 pierna-3";
-    margin-bottom: 1rem;
-  }
-  .seccion-producto-2 .cabeza-2 {
-    grid-column-start: cabeza-2;
-    grid-column-end: cabeza-2;
+  100% {
+    transform: rotate(45deg) translateY(0px);
   }
 }
-@media screen and (min-width: 900px) {
-  .main-producto {
-    margin-top: 6rem;
+@keyframes t2 {
+  0% {
+    transform: rotate(65deg) translateY(0px);
   }
-  .main-producto h2 {
-    font-size: 6rem;
-    width: 100%;
-    text-align: center;
+  50% {
+    transform: rotate(65deg) translateY(20px);
   }
-  .main-producto p {
-    font-size: 2rem;
-  }
-  .seccion-producto-0 {
-    display: grid;
-    width: 80%;
-    grid-gap: 1rem;
-    grid-template-columns: auto;
-    grid-template-rows: auto;
-    grid-template-areas: "cabeza cabeza cabeza cabeza" "torso-0 torso-1 torso-2 torseo-3" "pie-0 pie-1 pie-2 pie-3";
-  }
-  .seccion-producto-0 .cabeza {
-    grid-column-start: cabeza;
-    grid-column-end: cabeza;
-    font-size: 4rem;
-  }
-  .seccion-producto-1 {
-    display: grid;
-    grid-gap: 1rem;
-    width: 80%;
-    grid-template-columns: auto;
-    grid-template-rows: auto;
-    grid-template-areas: "cabeza-1 cabeza-1 cabeza-1 cabeza-1" "tronco-0 tronco-1 tronco-2 tronco-3" "raiz-0 raiz-1 raiz-2 raiz-3";
-  }
-  .seccion-producto-1 .cabeza-1 {
-    grid-column-start: cabeza-1;
-    grid-column-end: cabeza-1;
-    font-size: 4rem;
-  }
-  .seccion-producto-2 {
-    display: grid;
-    grid-gap: 1rem;
-    width: 80%;
-    grid-template-columns: auto;
-    grid-template-rows: auto;
-    grid-template-areas: "cabeza-2 cabeza-2 cabeza-2 cabeza-2" "abdomen-0 abdomen-1 abdomen-2 abdomen-3" "pierna-0 pierna-1 pierna-2 pierna-3";
-  }
-  .seccion-producto-2 .cabeza-2 {
-    grid-column-start: cabeza-2;
-    grid-column-end: cabeza-2;
-    font-size: 4rem;
+  100% {
+    transform: rotate(65deg) translateY(0px);
   }
 }
-@media only screen and (min-width: 1135px) {
-  .main-producto {
-    margin-top: 6rem;
+@keyframes t3 {
+  0% {
+    transform: rotate(45deg) translateY(0px);
   }
-  .main-producto h2 {
-    font-size: 6.3rem;
-    width: 100%;
-    text-align: center;
+  50% {
+    transform: rotate(45deg) translateY(20px);
   }
-  .main-producto p {
-    font-size: 2rem;
-    width: 50%;
-  }
-  .seccion-producto-0 {
-    display: grid;
-    grid-gap: 1rem;
-    grid-template-areas: "cabeza cabeza cabeza cabeza" "torso-0 torso-1 torso-2 torseo-3" "pie-0 pie-1 pie-2 pie-3";
-  }
-  .seccion-producto-0 .cabeza {
-    grid-column-start: cabeza;
-    grid-column-end: cabeza;
-    font-size: 5rem;
-    width: 100%;
-  }
-  .seccion-producto-1 {
-    display: grid;
-    grid-gap: 1rem;
-    grid-template-areas: "cabeza-1 cabeza-1 cabeza-1 cabeza-1" "tronco-0 tronco-1 tronco-2 tronco-3" "raiz-0 raiz-1 raiz-2 raiz-3";
-  }
-  .seccion-producto-1 .cabeza-1 {
-    grid-column-start: cabeza-1;
-    grid-column-end: cabeza-1;
-    font-size: 5rem;
-    width: 100%;
-  }
-  .seccion-producto-2 {
-    display: grid;
-    grid-gap: 1rem;
-    grid-template-areas: "cabeza-2 cabeza-2 cabeza-2 cabeza-2" "abdomen-0 abdomen-1 abdomen-2 abdomen-3" "pierna-0 pierna-1 pierna-2 pierna-3";
-  }
-  .seccion-producto-2 .cabeza-2 {
-    grid-column-start: cabeza-2;
-    grid-column-end: cabeza-2;
-    font-size: 5rem;
-    width: 100%;
+  100% {
+    transform: rotate(45deg) translateY(0px);
   }
 }
+.jersey__title {
+  text-align: center;
+  margin-top: 50px;
+  position: relative;
+  z-index: -1;
+  margin: 0 auto;
+  width: 80%;
+  margin-top: 20px;
+  box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
+  background: rgba(255, 255, 255, 0.7);
+  border-left: 1px solid rgba(255, 255, 255, 0.5);
+  border-top: 1px solid rgba(255, 255, 255, 0.5);
+  border-radius: 15px;
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  transition: all 300ms;
+}
+.jersey__title h2 {
+  font-size: 2.5rem;
+  font-family: "Paytone One", sans-serif;
+}
+
+.accesorios__title {
+  line-break: anywhere;
+  text-align: center;
+  margin-top: 50px;
+  position: relative;
+  z-index: -1;
+  margin: 0 auto;
+  width: 80%;
+  margin-top: 20px;
+  box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
+  background: rgba(255, 255, 255, 0.7);
+  border-left: 1px solid rgba(255, 255, 255, 0.5);
+  border-top: 1px solid rgba(255, 255, 255, 0.5);
+  border-radius: 15px;
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  transition: all 300ms;
+}
+.accesorios__title h2 {
+  font-size: 2.5rem;
+  font-family: "Paytone One", sans-serif;
+}
+
+.funkosyubble__title {
+  text-align: center;
+  margin-top: 50px;
+  position: relative;
+  z-index: -1;
+  margin: 0 auto;
+  width: 80%;
+  margin-top: 20px;
+  box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
+  background: rgba(255, 255, 255, 0.432);
+  border-left: 1px solid rgba(255, 255, 255, 0.5);
+  border-top: 1px solid rgba(255, 255, 255, 0.5);
+  border-radius: 15px;
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  transition: all 300ms;
+}
+
+h2 {
+  font-size: 2.5rem;
+  font-family: "Paytone One", sans-serif;
+}
+
+.container__cards {
+  width: 100%;
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  transform: translate(-50%, -50%);
+  position: relative;
+  top: 0;
+  left: 0;
+  transform: none;
+  padding-bottom: 20px;
+}
+
+.card {
+  width: 350px;
+  margin: 10px;
+  padding: 20px;
+  box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
+  background: rgba(255, 255, 255, 0.1);
+  border-left: 1px solid rgba(255, 255, 255, 0.295);
+  border-top: 1px solid rgba(255, 255, 255, 0.356);
+  border-radius: 15px;
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  transition: all 300ms;
+}
+
+.card:hover {
+  transform: translateY(-5px);
+}
+
+.card:hover .cover__card img {
+  transform: scale(1);
+}
+
+.cover__card {
+  width: 100%;
+  height: 300px;
+  border-radius: 14px;
+  overflow: hidden;
+  text-align: center;
+}
+.cover__card h3 {
+  margin-bottom: 25px;
+  font-family: "Paytone One", sans-serif;
+}
+.cover__card .gorra__gris {
+  margin-top: -2rem;
+}
+.cover__card .funko__bubble {
+  height: 80%;
+}
+
+.cover__card img {
+  width: 80%;
+  transition: all 300ms;
+}
+
+.card p {
+  margin-top: 20px;
+  font-size: 14px;
+  font-weight: 300;
+  letter-spacing: 0.5px;
+}
+
+.footer__card {
+  margin-top: 1.5rem;
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer__card h3 {
+  font-size: 15px;
+  font-weight: 500;
+}
+
+.footer__card button {
+  border-radius: 20px;
+  background-color: #0fafdf;
+  width: 6rem;
+  font-family: "Paytone One", sans-serif;
+}
+
+.user__name {
+  font-family: "Paytone One", sans-serif;
+}
+
 .main__contacto {
   background: linear-gradient(to top, #0ABFBC, #FC354C);
   opacity: 0.9;
