--- a/scss/_headers.scss
+++ b/scss/_headers.scss
@@ -40,10 +40,16 @@
     height: 200px;
   }
   
+ 
   figcaption {
     width: auto;
     height: auto;
     margin-top: 1rem;
+
+     button {
+    background-color: #000000;
+  }
+  
   }
 }
 
@@ -88,7 +94,7 @@
 /*header Bibliografia*/
   
   .header-bibliografia {
-    min-height: 100vh;
+    min-height: 100vw;
     width: 100%;
     background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)), url(../assets/Bigthree.jpg);
     background-position: center;
@@ -109,7 +115,7 @@
   }
   
   h2 {
-    font-size: 3rem;
+    font-size: 2.0rem;
     font-family: 'Lobster', cursive;
   }
   
@@ -120,6 +126,12 @@
   }
 
   }
+  
+@media screen and (min-width: 1024px) {
+    .header-bibliografia {
+      min-height: 50vw;
+  }
+}
 
 /*header fanposts*/
 
