--- a/scss/_nav+generales.scss
+++ b/scss/_nav+generales.scss
@@ -10,25 +10,49 @@
     justify-content: space-between;
     align-items: center;
  
-  a{
-   
-    text-decoration: #fff;
-    
-  } 
-  a h1{
+  a {
+    position: relative;
+    text-decoration: none;
     font-family: 'Lobster', cursive;
     color: #fff;
-    text-decoration: underline;
     margin-left: 1rem;
+    position: relative;
+    padding-top: 0.5rem;
+
+  h1 {
+    color: #fff;
+     background:
+    linear-gradient(
+      to right,
+      rgba(248, 245, 245, 0.959),
+      rgb(246, 250, 250)
+    ),
+    linear-gradient(
+      to right,
+      rgb(241, 120, 21),
+      rgba(255, 0, 179, 0.815),
+      rgb(0, 200, 200)
+  );
+    background-size: 100% 3px, 0 3px;
+    background-position: 100% 100%, 0 100%;
+    background-repeat: no-repeat;
+    transition: background-size 400ms;
+
+    &:hover {
+      background-size: 0 3px, 100% 3px;
+      color: wheat;
+    }
+  }
+
   }
   
   .hamburguesa {
     position: relative;
     width: 30px;
     height: 4px;
-    background-color: #fff;
+    background-color: gray;
     cursor: pointer;
-    z-index: 2;
+    z-index: 200;
     border-radius: 10px;
     transition: 0.3s;
  
@@ -38,7 +62,8 @@
     position: absolute;
     height: 4px;
     right: 0;
-    background: #fff;
+    background-color: gray;
+    z-index: 200;
     border-radius: 10px;
     transition: 0.3s;
   }
@@ -69,7 +94,7 @@
   ul li {
     list-style: none;
     display: inline-block;
-    padding: 8px 12px;
+    padding: 30px 12px;
     position: relative;
  
 
@@ -77,14 +102,21 @@
       content: "";
       width: 0%;
       height: 2px;
-      background: #dbd5d4;
       display: block;
       margin: auto;
-      transition: 0.5s;
+      background:
+      linear-gradient(
+        to right,
+        rgba(100, 200, 200, 1),
+        rgb(211, 41, 188)
+      );
+      transition: 400ms;
+
     }
     
     &:hover:after {
       width: 100%; 
+      transition: 400ms;
     }
   }
   
@@ -93,7 +125,7 @@
    color: #fff;
    margin-top: 1rem;
    text-decoration: none;
-   font-size: 1.1rem;
+   font-size: 1.3rem;
    font-family: 'Sriracha', cursive;
   }
   
@@ -105,6 +137,7 @@
       right: 0;
       background-color: #000000;
       opacity: 0.9;
+      height: 100%;
     }
     
 
@@ -129,7 +162,6 @@
   .toogle-menu {
     position: absolute;
     width: 30px;
-    height: 100%;
     z-index: 3;
     cursor: pointer;
     opacity: 0;
@@ -149,15 +181,20 @@
     background-color: transparent;
     height: 350px;
     padding-top: 65px; 
-    width: 100%;  
- 
+    width: 100%; 
+    transition: 0.5s;
+
+
     li {
       width: 100%;
     }
     
     a {
       padding: 30px; 
-      font-size: 24px;
+
+      &:hover {
+        color: wheat;
+      }
     }
   }
 }
