--- a/scss/_headers.scss
+++ b/scss/_headers.scss
@@ -26,7 +26,7 @@
     margin: 20px 0 40px;
     font-size: 1rem;
     color: #fff;
-    font-family: 'Permanent Marker', cursive;;
+    font-family: 'Permanent Marker', cursive !important;
   }
   
   figure {
