--- a/css/estilos.css
+++ b/css/estilos.css
@@ -206,7 +206,7 @@
   margin: 20px 0 40px;
   font-size: 1rem;
   color: #fff;
-  font-family: "Permanent Marker", cursive;
+  font-family: "Permanent Marker", cursive !important;
 }
 .header .caja-texto figure {
   width: 200px;
@@ -2249,8 +2249,6 @@
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
   transition: all 300ms;
-}
-.accesorios__title h2 {
   font-size: 2.5rem;
   font-family: "Paytone One", sans-serif;
 }
@@ -2271,9 +2269,6 @@
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
   transition: all 300ms;
-}
-
-h2 {
   font-size: 2.5rem;
   font-family: "Paytone One", sans-serif;
 }
