--- a/scss/_headers.scss
+++ b/scss/_headers.scss
@@ -131,6 +131,20 @@
     .header-bibliografia {
       min-height: 50vw;
   }
+
+  .seccion-bibliografia-0 {
+
+    h2 {
+      font-size: 3rem;
+      font-family: 'Lobster', cursive;
+    }
+    
+    p {
+      margin: 20px 0 40px;
+      font-size: 3rem;
+      font-family: 'Lobster', cursive;
+    }
+  }
 }
 
 /*header fanposts*/
